environments/dev/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: keycloak

spec:
  parentRefs:
    - name: eduhamuy-shared-gateway
      namespace: eduhamuy-gateway
      sectionName: https

  hostnames:
    - keycloak-dev.eduhamuy.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
